dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=chatlld.1
endif

if ENABLE_QT
  dist_man1_MANS+=chatll-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=chatll-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=chatll-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=chatll-wallet.1
endif
endif
